# project1-prog3

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  Coursework1.sln  README.md  build_and_run.ps1  build_and_run.sh
Coursework1/: Coursework1.vcxproj  Coursework1.vcxproj.filters
Headers/: DataSource.h  DataStructure.h  DateTime.h  Headers.h  Items.h  Test.h  platform_compat.h
libs/: DataSource.def  DataSource.lib
scripts/: make_import_lib.bat
src/: DataStructure.cpp  MockDataSource.cpp  main.cpp
